GET_FILENAME_COMPONENT(CURRENT_DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(TOLOWER ${CURRENT_DIR_NAME} TEST_EXECUTABLE)

MESSAGE("## TEST [${CMAKE_PROJECT_NAME}]:[${TEST_EXECUTABLE}]")

# Define executable
ADD_EXECUTABLE(${TEST_EXECUTABLE} src/${CURRENT_DIR_NAME}_main.cpp)


# Add dependencies
TARGET_LINK_LIBRARIES(${TEST_EXECUTABLE} ed247_test)
TARGET_INCLUDE_DIRECTORIES(${TEST_EXECUTABLE} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/../../src/ed247)

TARGET_LINK_LIBRARIES(${TEST_EXECUTABLE} GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
TARGET_INCLUDE_DIRECTORIES(${TEST_EXECUTABLE} PUBLIC ${GTEST_PATH}/include)

TARGET_LINK_LIBRARIES(${TEST_EXECUTABLE} test_api)
TARGET_INCLUDE_DIRECTORIES(${TEST_EXECUTABLE} PUBLIC ${TEST_API_INCLUDE_DIR})

FIND_LIBRARY(LIBXML2_STATIC_LIBRARIES libxml2.a libxml2_a libxml2_a_dll xml2_a xml2_a_dll HINTS ${LIBXML2_LIBRARY_DIR})
TARGET_LINK_LIBRARIES(${TEST_EXECUTABLE} ${LIBXML2_STATIC_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(${TEST_EXECUTABLE} PUBLIC ${LIBXML2_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})

# Define deployed items
INSTALL(TARGETS ${TEST_EXECUTABLE}
    RUNTIME DESTINATION tests/bin)

FILE(GLOB CONFIGS LIST_DIRECTORIES false ${CMAKE_CURRENT_LIST_DIR}/config/*)
FILE(GLOB SH LIST_DIRECTORIES false ${CMAKE_CURRENT_LIST_DIR}/sh/*)

INSTALL(FILES ${CONFIGS}
    DESTINATION tests/config/${TEST_EXECUTABLE})
INSTALL(FILES ${SH}
    DESTINATION tests/bin
    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
